# 5-semester

ADA/Balls_and_bins/: Balls_and_bins.rar
ADA/Balls_and_bins/ConsoleApplication1/: ConsoleApplication1.sln
ADA/Balls_and_bins/Sorting/: Sorting.sln
ADA/Balls_and_bins_andet_udkast/Balls_and_bins/: Balls_and_bins.sln
ADA/Exercise_4_8/: Exercise_4_8.sln
ADA/Exercise_4_8/Exercise_4_8/: Exercise_4_8.vcxproj  Exercise_4_8.vcxproj.filters  Hash.cpp  Hash.h  List.cpp  List.h  Source.cpp
ADA/Portfolio1/: Portfolio1.sln
ADA/Portfolio1/Portfolio1/: AvlTree.cpp  AvlTree.h  Portfolio1.vcxproj  Portfolio1.vcxproj.filters  Source.cpp
ADA/Portfolio2/opg7_38/: opg7_38.sln
ADA/Portfolio4/Portfolio4/: Portfolio4.sln
ADA/ada code/lec1-recurtion/: lec1-recurtion.sln
ADA/opgave6_37/: opgave6_37.sln
ADA/opgave6_37/opgave6_37/: Box.cpp  Box.h  (+7 more)
Robotter_i_kontekst/: .gitignore  Bug_Algo_beta.rar
Robotter_i_kontekst/Bug_Algo_beta/: Bug_Algo_beta.VC.VC.opendb  Bug_Algo_beta.sln  Portefølje 3.docx  testoutsave.pgm
Robotter_i_kontekst/Chris-Junk/: Robot.cpp  Robot.h  Source.cpp
Robotter_i_kontekst/bug_algo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  UGE1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  readpgmtest.vcxproj  readpgmtest.vcxproj.filters
Robotter_i_kontekst/bug_algo/code/: CMakeLists.txt  Image.cpp  PPMLoader.cpp  PPMLoader.hpp  README  README~
leo/sandkasse/: Dockerfile  client  client.cpp  firstProgram  firstProgram.cpp  mouseControl.py  not_a_virus.sh  pub1.py  server  server.cpp  shout_filter.py  test.py
(+175 files in other folders)
